--- a/WebContent/resources/css/main.css
+++ b/WebContent/resources/css/main.css
@@ -1,6 +1,10 @@
 /*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
 
-html,button,input,select,textarea {
+html,
+button,
+input,
+select,
+textarea {
     color: #222;
 }
 
@@ -28,7 +32,10 @@ hr {
     padding: 0;
 }
 
-audio,canvas,img,video {
+audio,
+canvas,
+img,
+video {
     vertical-align: middle;
 }
 
@@ -48,6 +55,7 @@ textarea {
     color: #000;
     padding: 0.2em 0;
 }
+
 
 /* ===== Initializr Styles ==================================================
    Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
@@ -89,7 +97,7 @@ body {
 /* ==============
     MOBILE: Menu
    ============== */
-   
+
 nav ul {
     margin: 0;
     padding: 0;
@@ -106,10 +114,12 @@ nav a {
 
     color: brown;
 
+
     -webkit-transition: color 200ms ease-in 100ms;
     -moz-transition: color 200ms ease-in 100ms;
     -o-transition: color 200ms ease-in 100ms;
     transition: color 200ms ease-in 100ms;
+
 }
 
 nav a:hover,
@@ -124,8 +134,8 @@ nav a:hover {
 /* ==============
     MOBILE: Main
    ============== */
-   
-.cb-wrap{
+
+    .cb-wrap{
         display: none;
     }
 
@@ -176,6 +186,7 @@ nav a:hover {
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 1);
     font-weight: normal;
 }
+
 
 .topimgtitle {
     position: relative;
@@ -299,7 +310,10 @@ footer a:hover {
     color: #ff0;
 }
 
-.title {
+
+ 
+
+   .title {
         float: left;
         display: block;
         margin: 0 auto;                
@@ -313,12 +327,15 @@ footer a:hover {
         transition: all .3s ease;
         background-position-y: center;         
         background-position-x: center;         
-}
 
-.con-wrap {
+    }
+
+
+    .con-wrap {
         position: relative;
         background-color:#fff;
-}
+    }
+
 
 /***  Chart and Order form ***/
 
@@ -326,6 +343,8 @@ input {
     font-family: Dosis, sans-serif;
     outline: none;
 }
+
+
 
 .continueBtn, .cancelBtn {
     float: right;
@@ -347,9 +366,13 @@ input {
     color: #fff;
 }
 
+
 .continueBtn:hover, .cancelBtn:hover, .continueBtn:focus, .cancelBtn:focus  {
     box-shadow: 0 0 5px #000;
 }
+
+/*** ****/
+
 
 /* ==========================================================================
    Media Queries
@@ -411,6 +434,7 @@ nav a {
 
 }
 
+
     nav a {
         float: left;
         width: 12%;
@@ -426,6 +450,7 @@ nav a {
     nav li:last-child a {
         margin-right: 0;
     }
+
 
 /* ========================
     INTERMEDIATE: IE Fixes
